[project]
name = "multi-agent-decision-system"
version = "0.1.0"
dependencies = [
    "langchain>=0.2",
    "langchain-openai>=0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
